--- a/dashboard/templates/jobs/log_detail.html
+++ b/dashboard/templates/jobs/log_detail.html
@@ -69,7 +69,7 @@
                     <div class="col-sm-6 col-md-3">
                         {% if log.job_yml_text %}
                             <h2>Job YML <small>(input)</small></h2>
-                            <textarea class="form-control" style="background:DimGrey;color:white" rows="25" readonly>{{ log.job_yml_text }}</textarea>
+                            <textarea class="form-control" style="background:#212121;color:white" rows="25" readonly>{{ log.job_yml_text }}</textarea>
                         {% endif %}
                     </div>
                     <div class="col-sm-6 col-md-8">
