--- a/dashboard/templates/releases/release_list.html
+++ b/dashboard/templates/releases/release_list.html
@@ -77,10 +77,10 @@
         <div class="list-view-pf-body">
           <div class="list-view-pf-description">
             <div class="list-group-item-heading">
-              {{ relstream.product_name }}
+              {{ relstream.product_slug }}
             </div>
             <div class="list-group-item-text">
-              <a href="{{ relstream.product_url }}" target="_blank" class="lead">{{ relstream.product_url|url_parse }}</a>
+              <a href="{{ relstream.product_url }}" target="_blank" class="lead">{{ relstream.product_name }}</a>
               <span class="fa fa-external-link" aria-hidden="true"></span>
             </div>
           </div>
