--- a/dashboard/templates/releases/release_view.html
+++ b/dashboard/templates/releases/release_view.html
@@ -49,9 +49,7 @@
         <button type="button" id="button-detailed" class="btn btn-default">Detailed</button>
         <button type="button" id="button-lang-wise" class="btn btn-default">Language Wise</button>
       </span>
-      <a class="btn btn-default btn-small" id="button-release-settings" href="{% url 'settings-stream-branches' release_stream %}" data-toggle="tooltip" title="{{ release_branch }} Settings">
-        <span class="fa fa-cog" aria-hidden="true"></span>
-      </a>
+      <a href="{{request.META.HTTP_REFERER}}" class="btn btn-default btn-small">Go Back</a>
     </span>
   </div>
   <div class="panel-body">
