few more ui changes

--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -164,9 +164,9 @@
 		<span class="list-group-item-value">Predefined Jobs</span>
 	      </a>
 	    </li>
-	    <li class="list-group-item" id="li-jobs-yaml-based" data-toggle="tooltip" title="YAML based Jobs">
+	    <li class="list-group-item" id="li-jobs-yml-based" data-toggle="tooltip" title="YML based Jobs">
 	      <a href="{% url 'jobs-yml-based' %}">
-		<span class="list-group-item-value">YAML based Jobs</span>
+		<span class="list-group-item-value">YML based Jobs</span>
 	      </a>
 	    </li>
 	    <li class="list-group-item" id="li-jobs-logs" data-toggle="tooltip" title="Inspect Logs">
