fix node cache issue

--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -142,7 +142,7 @@
       </li>
       <li class="list-group-item" id="li-packages">
         <a href="{% url 'settings-packages' %}">
-          <span class="fa fa-file-zip-o" data-toggle="tooltip" title="Packages"></span>
+          <span class="pficon pficon-bundle" data-toggle="tooltip" title="Packages"></span>
           <span class="list-group-item-value">Packages</span>
 
         </a>
