--- a/dashboard/templates/summary.html
+++ b/dashboard/templates/summary.html
@@ -37,7 +37,7 @@
     <div class="card-pf card-pf-accented card-pf-aggregate-status card-pf-aggregate-status-mini">
       <h2 class="card-pf-title">
         <a href="{% url 'settings-packages' %}">
-          <span class="fa fa-file-zip-o"></span>
+          <span class="pficon pficon-bundle"></span>
           <span class="card-pf-aggregate-status-count">{{ packages_len }}</span> Packages
         </a>
       </h2>
