--- a/dashboard/templates/base.html
+++ b/dashboard/templates/base.html
@@ -75,7 +75,10 @@
           </a>
           <ul class="dropdown-menu" aria-labelledby="dropdown-help">
             <li>
-              <a href="{% url 'howto' %}">Help</a>
+              <a href="{% url 'howto' %}">Quick Start</a>
+            </li>
+            <li>
+              <a href="/api-docs" target="_blank">API Docs</a>
             </li>
             <li>
               <a href="http://docs.transtats.org" target="_blank">Project Docs</a>
@@ -257,7 +260,12 @@
           <ul class="list-group">
             <li class="list-group-item">
               <a href="{% url 'howto' %}">
-                <span class="list-group-item-value">Help</span>
+                <span class="list-group-item-value">Quick Start</span>
+              </a>
+            </li>
+            <li class="list-group-item">
+              <a href="/api-docs">
+                <span class="list-group-item-value">API Docs</span>
               </a>
             </li>
             <li class="list-group-item">
