--- a/dashboard/templates/releases/_workload_detailed.html
+++ b/dashboard/templates/releases/_workload_detailed.html
@@ -14,7 +14,7 @@
   <tbody>
     {% for package in packages %}
     <tr>
-      <td><a href="{% url 'package-view' package.0 %}">{{ package.0 }}</a></td>
+      <td><a href="{% if '*' not in package.0 %}{% url 'package-view' package.0 %}{% else %}#{% endif %}">{{ package.0 }}</a></td>
       {% for stat in package.1 %}
       <td>
         {% if stat > 90 %}
