--- a/dashboard/templates/releases/release_view.html
+++ b/dashboard/templates/releases/release_view.html
@@ -53,6 +53,7 @@
     </span>
   </div>
   <div class="panel-body">
+    <div><h2>{{ release_branch }}</h2></div>
     <div id="releasegraph" class="panel panel-default table-responsive panel-border-ts"></div>
     <center>
       <div id="localegraph" class="panel panel-default panel-border-ts"></div>
