--- a/dashboard/templates/packages/_packages_summary.html
+++ b/dashboard/templates/packages/_packages_summary.html
@@ -121,7 +121,7 @@
             </script>
           </div>
           <div class="col-xs-12 col-sm-4 col-md-4">
-            <h3 class="card-pf-subtitle">Packages not sync'd with Platform <small>this week</small></h3>
+            <h3 class="card-pf-subtitle">Sync'd with Platform more than a week ago</h3>
             <p class="card-pf-utilization-details">
               <span class="card-pf-utilization-card-details-count" id="not-affected-count-3">0</span>
               <span class="card-pf-utilization-card-details-description">
