--- a/dashboard/templates/packages/package_list.html
+++ b/dashboard/templates/packages/package_list.html
@@ -127,7 +127,7 @@
       <th>Translation Platform</th>
       <th>Products</th>
       {% if user.is_staff %}
-      <th colspan="2">Health</th>
+      <th colspan="2">Mapping</th>
       {% else %}
       <th>Mapping</th>
       {% endif %}
