--- a/dashboard/templates/jobs/log_detail.html
+++ b/dashboard/templates/jobs/log_detail.html
@@ -2,7 +2,7 @@
 {% load custom_tags %}
 
 {% block extrascript %}
-<link rel="stylesheet" type="text/css" href="/static/css/diff2html.css">
+<link rel="stylesheet" type="text/css" href="/static/diff2html/dist/diff2html.css">
 <style type="text/css">
     .list-group-item-text{
         max-height: 300px;
@@ -11,8 +11,8 @@
         -webkit-overflow-scrolling: touch;
     }
 </style>
-<script type="text/javascript" src="/static/js/diff2html.js"></script>
-<script type="text/javascript" src="/static/js/diff2html-ui.js"></script>
+<script type="text/javascript" src="/static/diff2html/dist/diff2html.js"></script>
+<script type="text/javascript" src="/static/diff2html/dist/diff2html-ui.js"></script>
 <script type="text/javascript">
     var diffHtml=Diff2Html.getPrettyHtml("{{ log.job_output_json|get_item:'full_diff'|escapejs }}",{inputFormat:"diff",showFiles:!0,matching:"lines",outputFormat:"side-by-side"});function copyToClipboard(t,o){var e=document.queryCommandSupported("copy"),i=o.attr("data-original-title");if(!0===e){var a=document.createElement("textarea");a.value=t,document.body.appendChild(a),a.select();try{var d=document.execCommand("copy")?"Copied!":"Whoops, not copied!";o.attr("data-original-title",d).tooltip("show")}catch(t){console.log("Oops, unable to copy")}document.body.removeChild(a),o.attr("data-original-title",i)}else window.prompt("Copy to clipboard: Ctrl+C or Command+C, Enter",t)}$(document).ready(function(){$("#tab-logs").addClass("active"),$("#diffDiv").html(diffHtml),$(".js-tooltip").tooltip(),$(".js-copy").click(function(){copyToClipboard($(this).attr("data-copy"),$(this))})});
 </script>
