marked for cleanup

--- a/dashboard/templates/stats/translation_status.html
+++ b/dashboard/templates/stats/translation_status.html
@@ -1,6 +1,6 @@
 <!-- Marked for deletion -->
-{% extends "home.html" %}
+<!--{% extends "home.html" %}-->
 
-{% block tabcontent %}
-    <br/>{% block viewcontent %}{% endblock %}
-{% endblock %}
+<!--{% block tabcontent %}-->
+    <!--<br/>{% block viewcontent %}{% endblock %}-->
+<!--{% endblock %}-->
